Fixed spacing

--- a/web/static/stylesheets/global/_layout.scss
+++ b/web/static/stylesheets/global/_layout.scss
@@ -202,6 +202,10 @@ $menu_height: 40px;
 }
 
 // PortfolioItem component properties
+.portfolio-item-container {
+  padding: 50px 0 0 0;
+}
+
 .portfolio-item-content {
   width: 100vw;
   height: inherit;
